--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 distro==1.9.0
 Flask==3.1.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -15,6 +16,7 @@ Jinja2==3.1.5
 jiter==0.8.2
 MarkupSafe==3.0.2
 openai==1.63.0
+packaging==25.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 requests==2.32.3
