--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ openai==1.63.0
 packaging==25.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+python-dotenv==1.2.1
 requests==2.32.3
 sniffio==1.3.1
 tqdm==4.67.1
